metadata: update layout.conf

--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -1,5 +1,10 @@
+# Specify the repository name, also found in profiles/repo_name
+repo-name = gnome
+# eclasses provided by gentoo are authoritative
+masters = gentoo
+# indicate that ebuilds with the specified EAPIs are deprecated
+#eapis-deprecated = 0 1 2 3 4
 # sign manifests in this repo
 #sign-manifests = true
 # thin-manifests only contain DIST entries
-masters = gentoo
 thin-manifests = true
